--- a/Final/bibliography/biblio.bib
+++ b/Final/bibliography/biblio.bib
@@ -1,56 +1,31 @@
-@article{perkins:1991,
-  title={Effects of nicotine on perceived exertion during low-intensity activity.},
-  author={Perkins, Kenneth A and Sexton, Joan E and Solberg-Kassel, Rena D and Epstein, Leonard H},
-  journal={Medicine \& Science in Sports \& Exercise},
-  year={1991},
-  publisher={Lippincott Williams \& Wilkins}
+@article{ozbudun1995seccim,
+  title={Se{\c{c}}im sistemleri ve T{\"u}rkiye},
+  author={{\"O}zbudun, Ergun},
+  journal={Ankara {\"U}niversitesi Hukuk Fak{\"u}ltesi Dergisi},
+  volume={44},
+  number={1},
+  year={1995}
 }
 
-@book{newbold:2003,
-	Author = {Newbold, Paul and Carlson, William Lee and Thorne, Betty},
-	Booktitle = {Statistics for Business and Economics},
-	Publisher = {Pearson College Division},
-	Title = {Statistics for Business and Economics},
-	Year = {2003}}
 
-@book{verzani:2014,
-	author = {Verzani, John},
-	publisher = {CRC Press},
-	title = {Using {R} for Introductory Statistics},
-	year = {2014}}
-
-
-@book{wickham:2014,
-	author = {Wickham, Hadley},
-	month = {Sep},
-	publisher = {CRC Press},
-	title = {Advanced {R}},
-	year = {2014}}
+@article{unal2019turkiye,
+  title={T{\"u}rkiye’nin Yeni Sisteminde Se{\c{c}}im {\"O}ncesi {\.I}ttifaklar},
+  author={{\"U}nal, Bet{\"u}l Aydo{\u{g}}an},
+  journal={G{\"u}m{\"u}{\c{s}}hane {\"U}niversitesi Sosyal Bilimler Dergisi},
+  volume={10},
+  number={2},
+  pages={321--328},
+  year={2019},
+  publisher={Gumushane University}
+}
 
 
-@article{aydinonat:2007,
-	Author = {Aydınonat, N. Emrah},
-	Title = {İktisat Öğrencileri için Ödev Yazma Kılavuzu},
-	url = {http://iktisat.cu.edu.tr/tr/Belgeler/Formlar/Bitirme%20Projesi%20Ödev%20Hazırlama%20Rehberi/N.%20Emrah%20AYDINONAT%20(2006)%20Ödev%20Rehberi.pdf},
-	Year = {2007}}
-
-
-@article{wooldridge:2015a,
-	author = {Wooldridge, Jeffrey M.},
-	journal = {Journal of Human Resources},
-	number = {2},
-	pages = {420--445},
-	title = {Control Function Methods in Applied Econometrics},
-	volume = {50},
-	year = 2015}
-
-
-@article{chang:2013,
-	author = {Chang, Dongfeng and Serletis, Apostolos},
-	journal = {Journal of Applied Econometrics},
-	month = {jan},
-	number = {2},
-	pages = {291--313},
-	title = {The Demand for Gasoline: Evidence from Household Survey Data},
-	volume = {29},
-	year = 2013}
+@article{unal2018stratejik,
+  title={Stratejik oy verme davran{\i}{\c{s}}{\i}: sistematik literat{\"u}r incelemesi},
+  author={{\"U}NAL, Bet{\"u}l AYDO{\u{G}}AN},
+  journal={Gaziantep University Journal of Social Sciences},
+  volume={17},
+  number={4},
+  pages={1415--1424},
+  year={2018}
+}
